[project]
name = "adaptive-learning-system"
version = "0.1.0"
description = "An adaptive learning system with AI-powered assessment"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gradio>=4.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
