[tool.poetry]
name = "knowledge-assessment"
version = "1.0.0"
description = "AI-Powered Adaptive Testing System"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["standard"], version = "0.115.11"}
uvicorn = {extras = ["standard"], version = "0.27.1"}
pydantic = "2.10.6"
openai = "1.68.2"
python-multipart = "0.0.20"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn main_app:app --host 0.0.0.0 --port 8000"
